<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">


    <LinearLayout
        android:id="@+id/contentContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvCongratulations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congratulations_user"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_score"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/tvScoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_value"
            android:textSize="32sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btnRestart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_new_quiz"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/next_button_bg"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/next_button_bg"
            android:textColor="@android:color/black"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>