<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvProgressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_text"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:progress="20"
        android:max="100"
        android:progressTint="#898888"
        app:layout_constraintTop_toBottomOf="@id/tvProgressText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp"/>

    <TextView
        android:id="@+id/tvQuestionTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/android_question_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/tvQuestionDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/question_details_go_here"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/tvQuestionTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btnOption1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:textSize="20sp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/option_default_bg"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/tvQuestionDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/btnOption2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:textSize="20sp"
        android:background="@drawable/option_default_bg"
        android:textColor="@android:color/black"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/btnOption1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnOption3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:background="@drawable/option_default_bg"
        android:textColor="@android:color/black"
        android:layout_marginHorizontal="40dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btnOption2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnOption4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:textSize="20sp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/option_default_bg"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/btnOption3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginHorizontal="40dp"
        android:fontFamily="sans-serif-black"
        android:background="@drawable/next_button_bg"
        android:textColor="@android:color/black"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>